--- a/ProductsMngmtAngular/package.json
+++ b/ProductsMngmtAngular/package.json
@@ -31,9 +31,11 @@
     "bootswatch": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
+    "jsbarcode": "^3.11.0",
     "moment": "^2.24.0",
-    "ngx-barcode": "^0.2.4",
+    "ngx-barcode6": "^1.0.12",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-loading": "^8.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -55,7 +57,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "^5.4.4",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
